# 001

./: .gitignore
NewBacktesting/: README.md  REFACTORING_SUMMARY.md  UNI_15m_4990candles_20260217.csv  UNI_15m_5012candles_20250530.csv  UNI_30m_5006candles_20250530.csv  WLD_15m_20250830_185939.csv  WLD_15m_20250830_190352.csv  WLD_15m_4979candles_20260217.csv  WLD_15m_4989candles_20260217.csv  WLD_15m_5000candles_20250421.csv  WLD_15m_5014candles_20250513.csv  WLD_15m_5015candles_20250530.csv  WLD_1d_20250830_185939.csv  WLD_1d_20250830_190352.csv  WLD_1d_366candles_20250421.csv  WLD_1d_660candles_20250514.csv  WLD_1d_677candles_20250530.csv  WLD_1d_940candles_20260217.csv  WLD_1h_4995candles_20260217.csv  WLD_1h_4998candles_20260217.csv  WLD_1h_5000candles_20250421.csv  WLD_1h_5003candles_20250513.csv  WLD_1h_5004candles_20250530.csv  WLD_1m_20250830_185939.csv  WLD_1m_20250830_190352.csv  WLD_1m_4678candles_20260217.csv  WLD_1m_4848candles_20260217.csv  WLD_30m_20250830_185939.csv  WLD_30m_20250830_190352.csv  WLD_30m_5000candles_20250421.csv  WLD_30m_5007candles_20250513.csv  WLD_30m_5007candles_20250530.csv  WLD_4h_20250830_185939.csv  WLD_4h_20250830_190352.csv  WLD_4h_2190candles_20250421.csv  WLD_4h_3956candles_20250513.csv  WLD_4h_4058candles_20250530.csv  WLD_4h_4999candles_20260217.csv  WLD_5m_20250830_185939.csv  WLD_5m_20250830_190352.csv  (+67 more)
NewBacktesting/examples/: sma_crossover.py  test_backtest.py
NewBacktesting/strategies/: MIGRATION_PROGRESS.md  NEW_STRATEGIES.md  __init__.py
NewBacktesting/tests/: test_batch_runner.py  test_default_paths.py  (+2 more)
(+443 files in other folders)
