[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newbacktesting"
version = "0.1.0"
description = "A modern, modular, high-performance backtesting framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]
keywords = ["trading", "backtesting", "finance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
plot = ["plotly>=5.14.0"]
dev = ["pytest>=7.0.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/yourusername/newbacktesting"
Documentation = "https://github.com/yourusername/newbacktesting"
Repository = "https://github.com/yourusername/newbacktesting"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
backtest = ["py.typed"]

[tool.pytest.ini_options]
# Add src/ and project root to sys.path so tests can import backtest.* and strategies.*
pythonpath = ["src", "."]
testpaths  = ["tests"]
